--- a/Frontend/src/app/pagine/catalogo/catalogo.css
+++ b/Frontend/src/app/pagine/catalogo/catalogo.css
@@ -7,7 +7,7 @@
 
 .catalogo h1 {
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 150px;
   color: #ffffff;
   font-size: 2.5rem;
   text-decoration: none;
